Bug 236484: check for the attributes "focused" and "_moz-menuactive" in WidgetStateChanged. r+sr=bz